# ChangeLog for app-editors/katoob
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/katoob/ChangeLog,v 1.18 2007/02/21 21:19:18 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  20 Dec 2006; Leonardo Boshell <leonardop@gentoo.org> katoob-0.5.6.ebuild:
  Dropping ppc keyword as a result of the new dependency on libgtksourceviewmm
  (bug #153959). Please re-add when convenient.

*katoob-0.5.6 (19 Dec 2006)

  19 Dec 2006; Leonardo Boshell <leonardop@gentoo.org> +katoob-0.5.6.ebuild:
  Version bump (bug #153959). Added 'highlight' USE flag to enable source code
  highlighting.

  20 Nov 2006; Leonardo Boshell <leonardop@gentoo.org> katoob-0.5.4.ebuild:
  Adjust dbus dependency (bug #154521).

*katoob-0.5.4 (31 Oct 2006)

  31 Oct 2006; Leonardo Boshell <leonardop@gentoo.org> +katoob-0.5.4.ebuild:
  New version. Added 'bidi', 'bzip2', 'cups' and 'dbus' USE flags. Updated
  dependencies. Original ebuild contributed by <pharon _at_ gmail _dot_ com>
  on bug #151767.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> katoob-0.3.8.ebuild:
  Stable on ppc.

  22 Nov 2004; Leonardo Boshell <leonardop@gentoo.org> katoob-0.3.8.ebuild:
  Marked stable on x86. Avoid einstall (bug #72024).

  15 Oct 2004; David Holm <dholm@gentoo.org> katoob-0.3.8.ebuild:
  Added to ~ppc.

*katoob-0.3.8 (07 Sep 2003)

  07 Sep 2004; L. Boshell <leonardop@gentoo.org> katoob-0.3.8.ebuild:
  New release. Resolves bug #62414. Thanks to Ahmed Farid for his help on
  this report.

  30 May 2004; L. Boshell <leonardop@gentoo.org> katoob-0.3.5.ebuild:
  Remove *_DISABLE_DEPRECATED macros. Resolves bug #52175.

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> katoob-0.2.1.ebuild,
  katoob-0.3.5.ebuild:
  Add die following econf for bug 48950

  16 Mar 2004; L. Boshell <leonardop@gentoo.org> katoob-0.3.5.ebuild:
  Inherit from eutils.
