@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/katoob/katoob-0.5.4.ebuild,v 1.2 2006/11/20 23:32:24 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/katoob/katoob-0.5.4.ebuild,v 1.3 2007/07/08 00:20:48 mr_bones_ Exp $
 
 inherit eutils
 
@@ -21,14 +21,11 @@ RDEPEND=">=dev-cpp/gtkmm-2.6
 		>=net-print/cups-1.1.23
 		>=x11-libs/pango-1 )
 	bzip2? ( app-arch/bzip2 )
-	dbus? ( || (
-		dev-libs/dbus-glib
-		~sys-apps/dbus-0.62 ) )"
+	dbus? ( dev-libs/dbus-glib )"
 
 DEPEND="${RDEPEND}
 	>=dev-util/intltool-0.28
 	>=dev-util/pkgconfig-0.9"
-
 
 src_compile() {
 	local myconf="$(use_enable spell aspell) \
@@ -47,4 +44,3 @@ src_install() {
 
 	dodoc AUTHORS ChangeLog NEWS README THANKS TODO
 }
-
