@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/katoob
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/katoob/ChangeLog,v 1.18 2007/02/21 21:19:18 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/katoob/ChangeLog,v 1.19 2007/07/08 00:20:48 mr_bones_ Exp $
+
+  08 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> katoob-0.3.8.ebuild,
+  katoob-0.5.4.ebuild, katoob-0.5.6.ebuild:
+  remove reference to old, removed dbus (bug #183696)
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
